--- a/VulkanTriangle/VulkanTriangle.vcxproj.filters
+++ b/VulkanTriangle/VulkanTriangle.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="src\VulkanObject.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\Lighting.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\GLFW_Window.h">
@@ -48,6 +51,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\tiny_obj_loader.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Lighting.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
