--- a/VulkanTriangle/VulkanTriangle.vcxproj.filters
+++ b/VulkanTriangle/VulkanTriangle.vcxproj.filters
@@ -56,5 +56,8 @@
     <ClInclude Include="include\Lighting.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="include\SubsurfacePass.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
